# API-test-framework

./: .env.example  .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
allure/: index.html
allure/59/: index.html
allure/59/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure/59/data/attachments/: 3c352dc95503ca5b.txt  428a90adb9d18efd.txt  64590ab06b288880.txt  6b43700f1e9f3292.txt  883893daf357dee9.txt  8d233cf0e26ba106.txt  a4bcfcb6cec83f49.txt  a5954ee9c3afdf5f.txt  adb3ee1b4353a8e2.txt  ba3b08d5c53c9b00.txt  c3566568dd4f6450.txt  d667ae2868c5042c.txt  e0d0faf2226845b1.txt  eb7c542fa7298dc1.txt
allure/59/data/test-cases/: 149f5d81bedff640.json  15352c59ef52bc5b.json  20e49fcd48e508da.json  253798ad31ff8e.json  2b867a3ef61cb9dd.json  325087df20b5586c.json  3b481180405c2f06.json  3bb83b6b492c39a2.json  3cef19cf0ba18412.json  3ed0e7a0b2ab9315.json  47cef26a777538fb.json  5259a8beedc8e3bf.json  5fe92ce200b0f0fc.json  61dad3afa9ea10fe.json  779290097b68ff4e.json  7da9d2f98688544.json  9290d2d1c62bbede.json  943fe60582b6e8a5.json  9ec7d1de35c859f1.json  a39da8ffcea88cd1.json  a559c791366d7d0e.json  b79427cc9cec5d1c.json  c3f3c32cf1239987.json  caaf6abd446f6d22.json  d055471bf3ab8373.json  e666a8fba5b57511.json  edaab3239a40695c.json  f60767781d9212ba.json  f6ffa9226e4da3fa.json  fbd6c9ef150e3e73.json  fd3bc9d0699b7533.json
allure/59/export/: influxDbData.txt  prometheusData.txt
allure/59/history/: history.json  retry-trend.json
allure/59/widgets/: categories-trend.json  executors.json  severity.json  status-chart.json  summary.json
allure/60/: index.html
allure/60/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure/60/data/attachments/: 267596abd87e2630.txt  2ceb2aee48beb8ac.txt  3643c8d0f219b3fa.txt  37452e78bdaa58f9.txt  38c16306dc5d081e.txt  399a2a775d50925f.txt  41d7f86a6ae0bd6b.txt  44ccbddca1125378.txt  9e242d05b8dbbb20.txt  9e2e6c9de6e032d0.txt  a41e9f9baeb5de11.txt  c885bd85a156fdc9.txt  fc8edce975d5e4cf.txt  fd19c5f4ed28374a.txt
allure/60/data/test-cases/: 1ab027eae276b498.json  1b8b9d44468322f7.json  235e8e22ef51341a.json  276f693aa09ddd0c.json  29a4baf751358ed9.json  2fe1899b32d80450.json  33762b36ac3dcb90.json  3996a5a261752534.json  4f21d71f8ea33f96.json  55049692fb59a8c.json  55735173a191826b.json  8d412f687830adfc.json  9b8e6a32b1719f86.json  9c768170b200e5c.json  a00f8c93474713c8.json  a525635df5f79cea.json  a8e3dd70712761f8.json  ad1deed37b49b85.json  b369e5bfbad54c58.json  bb54bacd20f05d6.json  c30273372a1256e6.json  c50db6dc84c3e367.json  ced25fb549d4c871.json  d51728df3389c169.json  d8a6cac2f4ec97cc.json  d9af140338611e20.json  e1fdaf8f360b1565.json  e65b05ef13fab46c.json  efc365c018b5cfcb.json  f396c8c0680fd804.json  f586a00b043d69ca.json
allure/60/export/: influxDbData.txt  prometheusData.txt
allure/60/history/: history.json
allure/60/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
allure/61/: index.html
allure/61/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure/61/data/attachments/: 2012a5427aca206d.txt  243cb35d9abbf729.txt  43c1e0c2eca296bd.txt  499dbb72c56e95d3.txt  692cb5b6451117f6.txt  7000036da9f53b8d.txt  76c7d3a3a364fa5e.txt  77bf71235985f23a.txt  81985ed47b0e3ae2.txt  99558bd58883f7bc.txt  a83777692d15687.txt  e0c921e46add153c.txt  f179b23cf6a84881.txt  f2b044cf02d7c950.txt
allure/61/data/test-cases/: 13256fc6789edf5e.json  18975a53ba82e9e9.json  19546043fd3c598a.json  1dc68bf761af974c.json  1e79e21180f0da92.json  24ea02ee720a057d.json  27492714de2fe22d.json  294309597371e7ae.json  40ca52659194b9dd.json  485aeec786dd72f6.json  5043746e1d77ad9d.json  (+20 more)
allure/61/export/: influxDbData.txt  prometheusData.txt
allure/61/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
allure/61/widgets/: duration.json  executors.json  history-trend.json  severity.json  summary.json
allure/last-history/: duration-trend.json  history-trend.json
api/: __init__.py  areas_api.py  base_api.py  dictionaries_api.py  vacancies_api.py
core/: __init__.py  config.py  http_client.py  logging.py  retry.py
data/: test_data.json
docker/: Dockerfile  Dockerfile.test  docker-compose.yml  entrypoint.sh
fixtures/: __init__.py  api_fixtures.py  data_fixtures.py
k8s/: configmap.yaml  deployment.yaml  secret.example.yaml  service.yaml
models/: __init__.py  area.py  base_model.py  dictionary.py  vacancy.py
tests/: test_areas.py  test_ci_smoke.py  test_dictionaries.py  test_integration.py  test_mocks.py  test_smoke.py  test_vacancies.py
tests/contract/: test_contract.py
tests/security/: test_security.py
utils/: __init__.py  logger.py
validators/: __init__.py  response_validator.py  schema_validator.py
